# tds

./: .gitignore  CMakeLists.txt  README.md
cmp/: _build.sh  _run.sh  build.sh  cmp_avltree  cmp_avltree-cmp_avltree.json  cmp_avltree.cpp
include/: tds.h
include/ta/: sort.h
include/tds/: array.h  arraylist.h  avltree.h  bitarray.h  bytearray.h  datablk.h  databox.h  deque.h  hashtbl.h  linkedlist.h  list.h  nbitsarray.h  queue_deq.h  queue_lst.h  rbtree.h  skiplist.h  stack_arr.h  stack_deq.h  stack_lst.h  string.h  vector.h
src/: array.c  arraylist.c  avltree.c  bitarray.c  datablk.c  databox.c  deque.c  hashtbl.c  linkedlist.c  list.c  queue_deq.c  queue_lst.h  stack_arr.c  stack_deq.c  stack_lst.c  string.c  ta_sort.c  tds_array.c  tds_arraylist.c  tds_avltree.c  tds_bitarray.c  tds_deque.c  tds_hashtbl.c  tds_linkedlist.c  tds_queue_deq.c  tds_stack_arr.c  tds_stack_lst.c  tds_string.c  vector.c
test/: CMakeLists.txt  test_array.c  test_arraylist.c  test_avltree.c  test_bitarray.c  test_deque.c  test_hashtbl.c  test_linkedlist.c  test_sort.c  test_stack_arr.c  test_string.c  test_tarray.c  test_tbitarray.c  test_tstring.c  test_vector.c
